<resources>
    <string name="app_name">KataplumApp</string>
    <string name="tools_attraction_name">El Trompo</string>
    <string name="tools_attraction_category">Adrenalina</string>
    <string name="tools_attraction_desc">¡Súbete a tu moto y haz trompos a toda velocidad! Esta atracción combina un impresionante movimiento de balanceo con giros mientras los pasajeros se encuentran en un asiento con forma de motocicleta. ¡Siente la adrenalina!</string>


    <!-- TODO: Navigation Bottom -->
    <string name="nav_bottom_home">Parque</string>
    <string name="nav_bottom_attraction">Atracciones</string>
    <string name="nav_bottom_pass">Pases</string>
    <string name="nav_bottom_map">Mapa</string>
    <string name="nav_bottom_food">Alimentos</string>

    <!-- TODO: Home Fragment -->
    // Text Views
    <string name="home_tv_greeting">BIENVENIDO A</string>
    <string name="home_tv_title">¡KATAPLUM!</string>
    <string name="home_tv_open">Abierto</string>
    <string name="home_tv_close">Cerrado</string>
    <string name="home_tv_tickets">Nuestros Accesos y Kataportes</string>
    <string name="home_tv_tickets_label">Comprar Kataporte</string>
    <string name="home_tv_complement">Complementos</string>
    <string name="home_tv_complement_label">Aprovecha al máximo tus pases</string>
    <string name="home_tv_events">Eventos especiales</string>
    <string name="home_tv_events_info">Descubre nuestros eventos</string>
    <string name="home_tv_attractions">Atracciones</string>
    <string name="home_tv_attractions_info">Descubre nuestras atracciones</string>
    <string name="home_tv_schedule">13:00 – 21:00 Hrs</string>

    // Buttons
    <string name="home_btn_calendar">Calendario</string>
    <string name="home_btn_map">Abrir Mapa</string>
    <string name="home_btn_submit">Ingresa tu Kataporte</string>
    <string name="home_btn_see_all">Ver todo</string>
    <string name="home_btn_view_attraction">Ver Atracción</string>

    <!-- TODO: Attraction Fragment -->
    // Text View
    <string name="attraction_tv_close">Cerrado</string>
    <string name="attraction_tv_adrenaline">Adrenalina</string>
    <string name="attraction_tv_family">Familiar</string>
    <string name="attraction_tv_infant">Infantil</string>
    <string name="attraction_hint_search">Buscar atracción</string>

</resources>