<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12sp"
    app:cardElevation="4sp"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/attractionCard"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0sp"
            app:cardElevation="0sp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_min="220sp"
            app:layout_constraintWidth_max="420sp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/attractionImage"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/trompo"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/attractionName"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:textAlignment="center"
            android:textSize="16.5sp"
            app:layout_constraintTop_toBottomOf="@id/attractionCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Theme.KataplumApp.TextView.Regular"
            tools:text="@string/tools_attraction_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/attractionCategory"
            android:layout_width="wrap_content"
            android:layout_height="0sp"
            android:layout_marginStart="12sp"
            android:layout_marginEnd="12sp"
            android:gravity="center"
            android:textSize="13.5sp"
            app:layout_constraintTop_toTopOf="@id/btnViewAttraction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnViewAttraction"
            app:layout_constraintBottom_toBottomOf="@id/btnViewAttraction"
            style="@style/Theme.KataplumApp.TextView.Condensed"
            tools:text="@string/tools_attraction_category" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnViewAttraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:layout_marginHorizontal="8sp"
            android:minHeight="0sp"
            android:minWidth="0sp"
            android:paddingVertical="10sp"
            android:text="@string/home_btn_view_attraction"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/attractionName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/attractionCategory"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>